# smart-home-automation

./: .gitignore  README.md  list_directories.sh  package-lock.json  package.json  start-dev.sh
backend/: .env.example  README.md  package-lock.json  package.json  server.js
cloud/lambda/: telemetry_lambda.py
cloud/smart-home-automation-infra/: cdk.json  package-lock.json  package.json
cloud/smart-home-automation-infra/lib/: smart-home-automation-infra-stack.ts
cloud/smart-home-automation-infra/test/: smart-home-automation-infra.test.ts
cloud/utils/: utils.py
config/: ConfigLoader.cpp  ConfigLoader.hpp
docs/: design-doc.md
edge-device/: CMakeLists.txt  config.json  config.json~  main.cpp  mock_gpio_controller.h
edge-device/light/: CMakeLists.txt  ILightSensor.hpp  LightController.cpp  LightController.hpp  LightMonitor.cpp  LightMonitor.hpp  LuxLogger.cpp  LuxLogger.hpp  MockLightSensor.cpp  MockLightSensor.hpp
edge-device/motion/: CMakeLists.txt  IMotionSensor.hpp  MockMotionSensor.cpp  MockMotionSensor.hpp  MotionMonitor.cpp  MotionMonitor.hpp
edge-device/orchestration/: CMakeLists.txt  SmartMqttOrchestrator.cpp  SmartMqttOrchestrator.hpp  SmartOrchestrator.cpp  SmartOrchestrator.hpp
edge-device/rules/: CMakeLists.txt  HighTempRule.cpp  HighTempRule.hpp  HumiditySpikeRule.cpp  HumiditySpikeRule.hpp  ISmartRule.hpp  MotionAtNightRule.cpp  MotionAtNightRule.hpp  SmartRuleEngine.cpp  SmartRuleEngine.hpp
edge-device/temperature_humidity/: CMakeLists.txt  EnvironmentMonitor.cpp  EnvironmentMonitor.hpp  ITemperatureHumiditySensor.hpp  MockTemperatureHumiditySensor.cpp  MockTemperatureHumiditySensor.hpp
mqtt/: IMqttClient.hpp  PahoMqttClient.cpp  PahoMqttClient.hpp
react-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-frontend/src/: App.tsx
react-frontend/src/api/: telemetryApi.ts
react-frontend/src/components/SensorCard/: SensorCard.tsx
react-frontend/src/features/alerts/: AlertItem.tsx  Alerts.tsx
react-frontend/src/features/analytics/: Analytics.tsx
react-frontend/src/features/analytics/charts/: HumidityChart.tsx  MotionChart.tsx  TemperatureChart.tsx
react-frontend/src/features/dashboard/: Dashboard.tsx
react-frontend/src/features/dashboard/hooks/: useDashboardData.ts
react-frontend/src/features/dashboard/widgets/: DeviceControlPanel.tsx  HumidityWidget.tsx  LightWidget.tsx  MotionWidget.tsx  MqttConnectionMonitor.tsx  SmartRulesStatus.tsx  TelemetryLogs.tsx  TempWidget.tsx
react-frontend/src/features/settings/: Settings.tsx
react-frontend/src/hooks/: useMqttData.ts
react-frontend/src/styles/: index.css
utils/: Logging.hpp  TimeUtils.hpp
